# Lion

./: .gitignore  CMakeLists.txt  README.md  SPECIFICATION.md
.github/workflows/: cmake-gtests.yml  cmake-multi-platform.yml
src/: lexer.cpp  main.cpp  parser.cpp  token.cpp
src/headers/: lexer.h  node.h  parser.h  token.h
src/headers/nodes/: if_node.h  node.h  variable_declaration_node.h
src/nodes/: node.cpp
tests/: test_cli.cpp  test_files_lexer.cpp  test_files_parser.cpp  test_lexer.cpp  test_token.cpp
tests/test_files/: arithmetic.lion  comparison.lion  if-else.lion  if.lion  logic.lion  program1.lion  program2.lion  variables.lion  variables_with_types.lion
